--- a/.htaccess
+++ b/.htaccess
@@ -21,5 +21,5 @@ ExpiresByType text/css A3600
 RewriteEngine On
 RewriteBase /
 RewriteCond %{QUERY_STRING} ^_escaped_fragment_=(?:[^&]*/)?([^&/]*)
-RewriteRule .* "http://seo.noddityaas.com/?noddityRoot=http://%{HTTP_HOST}%{REQUEST_URI}content/&postUrlRoot=http://%{HTTP_HOST}%{REQUEST_URI}#!/post/&post=%1"
+RewriteRule .* "http://seo.noddityaas.com/?noddityRoot=http://%{HTTP_HOST}%{REQUEST_URI}content/&postUrlRoot=http://%{HTTP_HOST}%{REQUEST_URI}#!/&post=%1"
 </IfModule>
